# xi-editor-ph7

./: .gitignore  README.md
rust/: Cargo.toml  metadata.json  run_all_checks  run_all_checks.ps1
rust/.cargo/: config.toml
rust/core-lib/: Cargo.toml
rust/core-lib/benches/: wrap.rs
rust/core-lib/src/: core.rs  editor.rs  event_context.rs  find.rs  layers.rs  lib.rs  linewrap.rs  recorder.rs  rpc.rs  styles.rs  tabs.rs  trace.rs  view.rs  watcher.rs  word_boundaries.rs
rust/core-lib/src/plugins/: catalog.rs  manifest.rs  mod.rs
rust/experimental/lang/: Cargo.toml
rust/experimental/lang/benches/: peg_tests.rs
rust/logs/: 20251113-cargo-check.txt  20251113-cargo-test.txt  after-slim.txt
rust/lsp-lib/: Cargo.toml
rust/plugin-lib/: Cargo.toml
rust/plugin-lib/src/: base_cache.rs  dispatch.rs  lib.rs  state_cache.rs  trace.rs  view.rs
rust/rope/: Cargo.toml
rust/rope/benches/: cursors.rs  diff.rs  edit.rs
rust/rope/src/: breaks.rs  compare.rs  delta.rs  diff.rs  engine.rs  find.rs  lib.rs  multiset.rs  rope.rs  serde_fixtures.rs  serde_impls.rs  spans.rs  test_helpers.rs  tree.rs
rust/rope/tests/: breaks_descriptors.rs  chunk_descriptor.rs  cursor_descriptor.rs  diff_regions.rs  grapheme_descriptor.rs  search_spans.rs  tree_builder_slice_trace.rs
rust/rpc/: Cargo.toml
rust/rpc/src/: lib.rs  parse.rs  test_utils.rs  trace.rs
rust/sample-plugin/: Cargo.toml
rust/syntect-plugin/: Cargo.toml
rust/trace/: Cargo.toml
rust/trace/benches/: bench_trace.rs
rust/trace/src/: chrome_trace_dump.rs  fixed_lifo_deque.rs  lib.rs
rust/unicode/: Cargo.toml
rust/unicode/benches/: bench.rs
(+15 files in other folders)
