[package]
name = "xi-core"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Raph Levien <raph@google.com>"]
description = "Main process for xi-core, based on json-rpc"
categories = ["text-editors"]
repository = "https://github.com/xi-editor/xi-editor"
edition = '2018'
rust-version = "1.75"

[dependencies]
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.5"
fern = "0.6"
log = "0.4.3"
dirs = "2.0"

[dependencies.xi-core-lib]
path = "core-lib"
default-features = false

[dependencies.xi-rpc]
path = "rpc"
default-features = false

[features]
default = ["trace", "watch"]
trace = ["xi-core-lib/trace", "xi-rpc/trace"]
watch = ["xi-core-lib/notify"]
serde = ["xi-core-lib/serde"]

[workspace]
members = [
  "core-lib",
  "plugin-lib",
  "rope",
  "rpc",
  "trace",
  "unicode",
]

default-members = [
  ".",
  "core-lib",
  "plugin-lib",
  "rope",
  "rpc",
  "trace",
  "unicode",
]
