[package]
authors = ["Raph Levien <raph@google.com>"]
description = "A generic rope data structure built on top of B-Trees."
license = "Apache-2.0"
name = "xi-rope"
repository = "https://github.com/google/xi-editor"
version = "0.3.0"
edition = '2018'
rust-version = "1.75"

[dependencies]
bytecount = "0.6"
memchr = "2.0"
serde = { version="1.0", optional=true, features=["derive"] }
unicode-segmentation = "1.2.1"
regex = "1.0"
smallvec = "1.11"
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
serde_test = "1.0.177"
tempfile = "3.10"

[features]
default = []
cursor_state = []
tree_builder_slice_trace = []
